# GRL

./: .gitignore  404.html  GRL-basics.ipynb  INSTALL.md  README.md  README_DOCS.md  check_formatting.py  environment.yml  fix_formatting.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
CONTRIBUTING/: index.html
GRL0/: index.html
GRL0/implementation/: index.html
GRL0/paper/: index.html
GRL0/quantum_inspired/: index.html
GRL0/recovering_classical_rl/: index.html
GRL0/tutorials/: index.html
LICENSE/: index.html
ROADMAP/: index.html
configs/: default.yaml
demo/: README.md
demo/DQL/: C3_W3_A1_DQN_Solution.ipynb  README.md
demo/images/: README.md
docs/: CONTRIBUTING.md  README.md  ROADMAP.md  index.md
docs/GRL0/: README.md  recovering_classical_rl.md
docs/javascripts/: mathjax.js
docs/notebooks/: README.md
docs/policy_gradient/: 01_PG.md  01a_parameterizing_policy.md  02_TRPO.md  03_PPO.md  03a_PG_in_PPO.md  04_PPO_variants.md  04a_PPO_vs_GRPO_in_LLM.md  04b_GRPO_QA.md  05_actions_as_operators.md  TRPO.md
docs/runpods/: project_setup_on_new_pod.md
docs/theory/: README.md
docs/tutorials/: quickstart.md
examples/: README.md
notebooks/: 01_classical_vector_fields.ipynb  01_classical_vector_fields_FULL.md  README.md  index.html  vector_field_outline.md
notebooks/field_series/: 00_intro_vector_fields.ipynb  01_classical_vector_fields.ipynb  01a_vector_fields_and_odes.ipynb  02_functional_fields.ipynb  README.md  ROADMAP.md  index.html
policy_gradient/01_PG/: index.html
policy_gradient/01a_parameterizing_policy/: index.html
policy_gradient/02_TRPO/: index.html
policy_gradient/03_PPO/: index.html
policy_gradient/03a_PG_in_PPO/: index.html
scripts/: README.md  auth_and_push.sh  git_consolidation.sh  push_to_main.sh  verify_installation.py
search/: search_index.json
tests/: __init__.py  test_envs.py  test_operators.py
theory/: index.html
(+109 files in other folders)
